MOBILE-4595 a11y: Fix contrast of focused buttons
Display a blue outline on focused buttons instead of changing the
background color, which caused color contrast issues.

--- a/src/theme/components/ion-button.scss
+++ b/src/theme/components/ion-button.scss
@@ -102,6 +102,18 @@ ion-button {
             border-left: 5px solid transparent;
         }
     }
+
+    &.ion-focused {
+        overflow: visible;
+    }
+
+    &.ion-focused::part(native) {
+        --background-focused-opacity: 0;
+        border-color: var(--ion-background-color);
+        box-shadow: inset 0 0 0 calc(2px - var(--border-width, 0px)) var(--ion-background-color);
+        outline: var(--a11y-shadow-focus-outline);
+        z-index: 1;
+    }
 }
 
 ion-button,
